--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.5",
-    "nodemon": "^2.0.7",
-    "nodemailer": "^6.5.0"
+    "nodemailer": "^6.5.0",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {},
   "scripts": {
